--- a/readme.org
+++ b/readme.org
@@ -82,6 +82,8 @@ O comando acima passa a seguinte matriz para o programa:
 
 Saída esperada do programa para a matriz de entrada:
 #+begin_src txt
+Solution found :')
+
 8 1 2 | 7 5 3 | 6 4 9
 9 4 3 | 6 8 2 | 1 7 5
 6 7 5 | 4 9 1 | 2 8 3
@@ -94,6 +96,8 @@ Saída esperada do programa para a matriz de entrada:
 4 3 8 | 5 2 6 | 9 1 7
 7 9 6 | 3 1 8 | 4 5 2
 
+Algorithm: UCS
+Total time: 16071 ms
 Total expanded states: 1813316
 #+end_src
 
